@@ -1,12 +1,10 @@
 
-As you see this is a early version, and there's things missing:
+As you see this is an early version, and there's things missing:
 
 - Documentation is not complete
 --- Explain faster-dupemerge
 - More backup types
 - Proper exit codes
 - Make ACLs work
-- No passwords into rabak.cf
 - Various TODOs in the library.
-- Explain wrapper
 - implement post processing with faster-dupemerge
