@@ -3,15 +3,13 @@
 
 # This file should have the appropriate permissions!!
 
-# IMPORTANT: Work in progress!! The "rabak conf" command will reveal the
-# contents of this file at the moment!!
-# 2ND THOUGHT: Shouldn't be a problem, as it is readable only by root anyway...
-
 # =======================================================================================
 #       SECRETS
 # =======================================================================================
 
-smb_passwd = secret
-mysql_passwd= "secret"
+smb_password = secret
+mysql_password= secret
+
+sample_pg.password = secret
 
 # EOF
